crates/pg_syntax/tests/snapshots/postgres_regress/partition_aggregate@21.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT c, sum(a) FROM pagg_tab WHERE c = 'x' GROUP BY c;"
---
SelectStmt@0..56
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      Ident@7..8 "c"
  Ascii44@8..9 ","
  Whitespace@9..10 " "
  ResTarget@10..15
    FuncCall@10..15
      Ident@10..13 "sum"
      Ascii40@13..14 "("
      ColumnRef@14..15
        Ident@14..15 "a"
  Ascii41@15..16 ")"
  Whitespace@16..17 " "
  From@17..21 "FROM"
  Whitespace@21..22 " "
  RangeVar@22..30
    Ident@22..30 "pagg_tab"
  Whitespace@30..31 " "
  Where@31..36 "WHERE"
  Whitespace@36..37 " "
  AExpr@37..44
    ColumnRef@37..38
      Ident@37..38 "c"
    Whitespace@38..39 " "
    Ascii61@39..40 "="
    Whitespace@40..41 " "
    AConst@41..44
      Sconst@41..44 "'x'"
  Whitespace@44..45 " "
  GroupP@45..50 "GROUP"
  Whitespace@50..51 " "
  By@51..53 "BY"
  Whitespace@53..54 " "
  ColumnRef@54..55
    Ident@54..55 "c"
  Ascii59@55..56 ";"

