crates/pg_syntax/tests/snapshots/postgres_regress/partition_aggregate@28.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT c FROM pagg_tab GROUP BY c ORDER BY 1;
---
SelectStmt@0..45
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      Ident@7..8 "c"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeVar@14..22
    Ident@14..22 "pagg_tab"
  Whitespace@22..23 " "
  GroupP@23..28 "GROUP"
  Whitespace@28..29 " "
  By@29..31 "BY"
  Whitespace@31..32 " "
  ColumnRef@32..33
    Ident@32..33 "c"
  Whitespace@33..34 " "
  SortBy@34..44
    Order@34..39 "ORDER"
    Whitespace@39..40 " "
    By@40..42 "BY"
    Whitespace@42..43 " "
    AConst@43..44
      Iconst@43..44 "1"
  Ascii59@44..45 ";"

