crates/pg_syntax/tests/snapshots/postgres_regress/partition_aggregate@30.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT a FROM pagg_tab WHERE a < 3 GROUP BY a ORDER BY 1;
---
SelectStmt@0..57
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      Ident@7..8 "a"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeVar@14..22
    Ident@14..22 "pagg_tab"
  Whitespace@22..23 " "
  Where@23..28 "WHERE"
  Whitespace@28..29 " "
  AExpr@29..34
    ColumnRef@29..30
      Ident@29..30 "a"
    Whitespace@30..31 " "
    Ascii60@31..32 "<"
    Whitespace@32..33 " "
    AConst@33..34
      Iconst@33..34 "3"
  Whitespace@34..35 " "
  GroupP@35..40 "GROUP"
  Whitespace@40..41 " "
  By@41..43 "BY"
  Whitespace@43..44 " "
  ColumnRef@44..45
    Ident@44..45 "a"
  Whitespace@45..46 " "
  SortBy@46..56
    Order@46..51 "ORDER"
    Whitespace@51..52 " "
    By@52..54 "BY"
    Whitespace@54..55 " "
    AConst@55..56
      Iconst@55..56 "1"
  Ascii59@56..57 ";"

