crates/pg_syntax/tests/snapshots/postgres_regress/partition_aggregate@39.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE pagg_tab2(x int, y int) PARTITION BY RANGE(y);"
---
CreateStmt@0..59
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..22
    Ident@13..22 "pagg_tab2"
  Ascii40@22..23 "("
  ColumnDef@23..28
    Ident@23..24 "x"
    Whitespace@24..25 " "
    TypeName@25..28
      IntP@25..28 "int"
  Ascii44@28..29 ","
  Whitespace@29..30 " "
  ColumnDef@30..35
    Ident@30..31 "y"
    Whitespace@31..32 " "
    TypeName@32..35
      IntP@32..35 "int"
  Ascii41@35..36 ")"
  Whitespace@36..37 " "
  PartitionSpec@37..57
    Partition@37..46 "PARTITION"
    Whitespace@46..47 " "
    By@47..49 "BY"
    Whitespace@49..50 " "
    Range@50..55 "RANGE"
    Ascii40@55..56 "("
    PartitionElem@56..57
      Ident@56..57 "y"
  Ascii41@57..58 ")"
  Ascii59@58..59 ";"

