crates/pg_syntax/tests/snapshots/postgres_regress/partition_aggregate@40.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE TABLE pagg_tab2_p1 PARTITION OF pagg_tab2 FOR VALUES FROM (0) TO (10);
---
CreateStmt@0..77
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..25
    Ident@13..25 "pagg_tab2_p1"
  Whitespace@25..26 " "
  Partition@26..35 "PARTITION"
  Whitespace@35..36 " "
  Of@36..38 "OF"
  Whitespace@38..39 " "
  RangeVar@39..48
    Ident@39..48 "pagg_tab2"
  Whitespace@48..49 " "
  For@49..52 "FOR"
  Whitespace@52..53 " "
  Values@53..59 "VALUES"
  Whitespace@59..60 " "
  PartitionBoundSpec@60..75
    From@60..64 "FROM"
    Whitespace@64..65 " "
    Ascii40@65..66 "("
    AConst@66..67
      Iconst@66..67 "0"
    Ascii41@67..68 ")"
    Whitespace@68..69 " "
    To@69..71 "TO"
    Whitespace@71..72 " "
    Ascii40@72..73 "("
    AConst@73..75
      Iconst@73..75 "10"
  Ascii41@75..76 ")"
  Ascii59@76..77 ";"

